--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,13 @@
     <string name="fr_gastos">Fragmento Gastos</string>
     <string name="fr_cuentas">Fragmento Cuentas</string>
     <string name="fr_resumen">Fragmento Resumen</string>
-    <string name="hello_blank_fragment">Fragmento Nuevo Gasto</string>
+    <string name="hello_blank_fragment">Fragmento en blanco</string>
     <string name="titulo_nuevo_gasto">Nuevo Gasto</string>
     <string name="titulo_editar_gasto">Editar Gasto</string>
+    <string name="title_gastos">Mis Gastos</string>
+    <string name="title_cuentas">Mis Cuentas</string>
+    <string name="title_resumen">Mi Resumen</string>
+    <string name="titulo_editar_billetera">Editar Billetera</string>
+    <string name="titulo_nueva_billetera">Nueva Billetera</string>
+    <string name="str_GUARDAR">GUARDAR</string>
 </resources>
